Coop Diff: Icon adjustments.

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -63,25 +63,20 @@
 			</section>
 			<section class="px-8 py-16">
 				<div class="mx-auto max-w-2xl text-center">
-					<h2 class="font-serif font-light text-3xl">
-						More than a promise
-					</h2>
+					<h2 class="font-serif font-light text-3xl"> More than a promise </h2>
 					<p>
 						Reliable and affordable power. That’s our first priority and the driving force behind everything
 						we do.
 					</p>
 					<p>
 						With the support of our 40 members, Tri-State has continuously met this commitment and remained
-						a
-						high-performing, agile cooperative power supplier across the Western states we proudly serve.
-						Our value is
-						further strengthened by investing in our members, employees, consumers, and communities beyond
-						the grid.
+						a high-performing, agile cooperative power supplier across the Western states we proudly serve.
+						Our value is further strengthened by investing in our members, employees, consumers, and
+						communities beyond the grid.
 					</p>
 					<p>
 						These investments would not be successful without the collaborative efforts of our members,
-						communities and
-						other stakeholders. Together, we are driving collective impact.
+						communities and other stakeholders. Together, we are driving collective impact.
 					</p>
 				</div>
 			</section>
@@ -126,13 +121,6 @@
 				</div>
 			</section>
 
-
-
-
-
-
-
-
 			<section class="bg-gray-light" id="energy-investments">
 				<!-- Background Image -->
 				<div class="relative flex flex-col justify-center min-h-[40vh] lg:h-[300px] lg:min-h-0">
@@ -163,48 +151,38 @@
 							Tri-State was recently awarded $2.5 billion in financing through the U.S. Department of
 							Agriculture’s Empowering Rural America (New ERA) Program. This program has been the most
 							significant federal funding for rural electric cooperatives since 1936 and will help to
-							further our
-							investments to
-							meet growing energy demand and improve the reliability and resiliency of our system.
+							further our investments to meet growing energy demand and improve the reliability and
+							resiliency of our system.
 						</p>
 						<p>
 							The program, designed to help rural cooperatives implement reliable and affordable energy
 							transitions, will support the building of new energy projects and some transmission, as well
-							as the
-							retirement of outdated sites. These projects will fight high energy costs and help our
-							members
-							reach 70% clean energy used in 2030, reducing greenhouse gas emissions by nearly 5.8 million
-							tons annually.
+							as the retirement of outdated sites. These projects will fight high energy costs and help
+							our members reach 70% clean energy used in 2030, reducing greenhouse gas emissions by nearly
+							5.8 million tons annually.
 						</p>
 						<p>
 							As part of the New ERA Program, we’re also investing in rural communities and offering
-							community
-							support, delivering on our commitment to our communities and those hosting our energy
-							projects.
+							community support, delivering on our commitment to our communities and those hosting our
+							energy projects.
 						</p>
 
 						<h3 class="mt-8 font-serif font-light text-lg">Electric Resource Planning</h3>
 						<p>
 							Our Electric Resource Plan (ERP) is central to our work to serve our members and meet our
 							regulatory requirements as we pursue various energy investments. The process includes
-							engagement
-							and collaboration with our members and numerous stakeholders to ensure reliable, affordable,
-							and
-							responsible power for our members.
+							engagement and collaboration with our members and numerous stakeholders to ensure reliable,
+							affordable, and responsible power for our members.
 						</p>
+
 						<p>
 							Following <a href="https://tristate.coop/co-regulators-approve-ERP-settlement"
-								class="underline">regulatory
-								approval of our Phase I ERP</a> from the Colorado Public Utilities Commission, we’ve now
-							initiated Phase II, beginning with the procurement process for new resources. It will lead
-							to
-							over an 80% reduction in our greenhouse gas emissions in Colorado and 70% clean energy used
-							by our
-							members
-							systemwide by 2030. Phase II also includes landmark direct financial assistance to the
-							communities of
-							Craig and Moffat
-							County, supporting their economic viability in light of coal plant closures.
+								class="underline">regulatory approval of our Phase I ERP</a> from the Colorado Public
+							Utilities Commission, we’ve now initiated Phase II, beginning with the procurement process
+							for new resources. It will lead to over an 80% reduction in our greenhouse gas emissions in
+							Colorado and 70% clean energy used by our members systemwide by 2030. Phase II also includes
+							landmark direct financial assistance to the communities of Craig and Moffat County,
+							supporting their economic viability in light of coal plant closures.
 						</p>
 					</div>
 
@@ -227,7 +205,7 @@
 						alt="Heavy machinery creating fire breaks in the forest"
 						class="absolute inset-0 w-full h-full object-cover z-0" />
 					<div class="size-44 aspect-square mx-auto p-4 z-10">
-						<img src="./assets/images/efficiency/mountain-white.svg" />
+						<img src="./assets/images/efficiency/mountain-white-shadow.svg" />
 					</div>
 				</div>
 
@@ -246,27 +224,17 @@
 				<div class="ts-expandable px-8 pb-16" data-expandable>
 					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
 						<h3 class="font-serif font-light text-lg">Wildfire Mitigation</h3>
-						<p>
-							High temperatures and dry conditions across our service area make the region susceptible to
+						<p> High temperatures and dry conditions across our service area make the region susceptible to
 							wildfires. To protect the people and ecosystems we serve and provide reliable energy,
-							Tri-State has
-							developed
-							an approach focusing on situational awareness. We’re using tools like drones and weather
-							monitoring to
-							analyze risk reduction and are in constant communication with land managers, fire districts,
-							and other
-							utilities to properly assess and manage risk. The data we collect allows us to better
-							understand the
-							breadth
-							of challenges posed by wildfires. We’re working hard to reduce risk through an average of
-							3,500
-							man-hours per year in vegetation management and clearing. To complement our regional
-							efforts, our staff
-							regularly coordinates with federal agencies. We are also uniquely positioned to have ongoing
-							wildfire
-							mitigation conversations with relevant agencies and industry partners through the
-							Electricity Subsector
-							Coordinating Council (ESCC) Wildfire Working Group.
+							Tri-State has developed an approach focusing on situational awareness. We’re using tools
+							like drones and weather monitoring to analyze risk reduction and are in constant
+							communication with land managers, fire districts, and other utilities to properly assess and
+							manage risk. The data we collect allows us to better understand the breadth of challenges
+							posed by wildfires. We’re working hard to reduce risk through an average of 3,500 man-hours
+							per year in vegetation management and clearing. To complement our regional efforts, our
+							staff regularly coordinates with federal agencies. We are also uniquely positioned to have
+							ongoing wildfire mitigation conversations with relevant agencies and industry partners
+							through the Electricity Subsector Coordinating Council (ESCC) Wildfire Working Group.
 						</p>
 						<a href="/wildfire-mitigation"
 							class="mb-6 inline-flex rounded-full border border-black px-4 py-2 font-normal no-underline text-black">
@@ -276,33 +244,19 @@
 						<h3 class="mt-8 font-serif font-light text-lg">Workplace Safety</h3>
 						<p>
 							Safety is our core value, and we put the safety of our employees, contractors, and
-							communities
-							above all else. We are committed to shaping a culture of safety, where every worker is
-							encouraged to
-							share
-							safety tips, close calls, stories, and knowledge in and out of meetings to improve our
-							collective
-							well-being. We believe that safety is built through relationships, and we encourage our
-							employees to
-							take care
-							of one another and maintain good communication. We reinforce our commitment to safety in
-							ways big and
-							small. This includes providing personal protective equipment, access to continuing safety
-							education,
-							trainings and certifications, and encouraging a standard of incident reporting to improve
-							our safety.
+							communities above all else. We are committed to shaping a culture of safety, where every
+							worker is encouraged to share safety tips, close calls, stories, and knowledge in and out of
+							meetings to improve our collective well-being. We believe that safety is built through
+							relationships, and we encourage our employees to take care of one another and maintain good
+							communication. We reinforce our commitment to safety in ways big and small. This includes
+							providing personal protective equipment, access to continuing safety education, trainings
+							and certifications, and encouraging a standard of incident reporting to improve our safety.
 							Tri-State recognizes that some jobs at our electric cooperative come with more risk than
-							others, which
-							is why we
-							recognize those in high-risk roles and provide hazard rate pay. Tri-State’s leaders set the
-							safety
-							example, and
-							field-trained safety personnel are on site at all times with employees. This year alone, two
-							coal sites
-							in
-							Colorado reached 12 and 13 years respectively without having any serious injury, and three
-							employees
-							received awards from the Colorado Mining Association for 30 years without injury.
+							others, which is why we recognize those in high-risk roles and provide hazard rate pay.
+							Tri-State’s leaders set the safety example, and field-trained safety personnel are on site
+							at all times with employees. This year alone, two coal sites in Colorado reached 12 and 13
+							years respectively without having any serious injury, and three employees received awards
+							from the Colorado Mining Association for 30 years without injury.
 						</p>
 						<a href="/company-culture"
 							class="mb-6 inline-flex rounded-full border border-black px-4 py-2 font-normal no-underline text-black">
@@ -327,10 +281,14 @@
 				<div class="relative flex flex-col justify-center min-h-[40vh] lg:h-[400px] lg:min-h-0">
 					<img src="https://tristate.coop/sites/default/files/2025-05/homes-under-construction.jpg"
 						alt="Homes under construction" class="absolute inset-0 w-full h-full object-cover z-0" />
-					<div class="size-44 aspect-square mx-auto p-4 z-10">
+
+					<div class="absolute inset-0 bg-black/20 z-5"></div>
+
+					<div class="size-52 aspect-square mx-auto p-4 z-10">
 						<img src="./assets/images/efficiency/house-white.svg" />
 					</div>
 				</div>
+
 
 				<!-- Heading & Summary -->
 				<div class="pt-10 pb-4">
