Coop Diff: Color adjustment to all sections

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -83,46 +83,10 @@
 
 
 
-			<section class="bg-gray-light relative px-8 py-16">
-				<div
-					class="relative z-10 grid grid-cols-1 max-w-52 mx-auto md:max-w-lg md:place-items-center md:grid-cols-2 lg:grid-cols-4 gap-8 text-center lg:max-w-3xl lg:mx-auto">
-					<div class="flex flex-col gap-4 items-center w-full">
-						<img class="w-20"
-							src="https://tristate.coop/sites/default/files/images/icons/efficiency/renewable-energy.svg" />
-						<a href="#energy-investments"
-							class="w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
-							Energy Investments
-						</a>
-					</div>
-					<div class="flex flex-col gap-4 items-center w-full">
-						<img class="w-20"
-							src="https://tristate.coop/sites/default/files/images/icons/efficiency/mountain.svg" />
-						<a href="#preserve-and-protect"
-							class="w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
-							Preserve &amp; Protect
-						</a>
-					</div>
-					<div class="flex flex-col gap-4 items-center w-full">
-						<img class="w-20"
-							src="https://tristate.coop/sites/default/files/images/icons/efficiency/house.svg" />
-						<a href="#good-neighbors"
-							class="w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
-							Good Neighbors
-						</a>
-					</div>
-					<div class="flex flex-col gap-4 items-center w-full">
-						<img class="w-20"
-							src="https://tristate.coop/sites/default/files/images/icons/efficiency/environment.svg" />
-						<a href="#shared-success"
-							class="w-full block rounded-full border border-black px-4 py-2 font-semibold no-underline text-black text-center">
-							Shared Success
-						</a>
-					</div>
-				</div>
-			</section>
 
-			<section class="bg-gray-light" id="energy-investments">
-				<!-- Background Image -->
+
+			<section id="energy-investments">
+				<!-- Hero Image -->
 				<div class="relative flex flex-col justify-center min-h-[40vh] lg:h-[300px] lg:min-h-0">
 					<img src="https://tristate.coop/sites/default/files/2025-05/solar-panels-close-up-at-dusk.jpg"
 						alt="Power lines running through mountain landscape"
@@ -133,7 +97,7 @@
 				</div>
 
 				<!-- Heading & Summary -->
-				<div class="pt-10 pb-4">
+				<div class="bg-gray-light py-10">
 					<div class="relative z-10 max-w-xl mx-auto text-center">
 						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Energy Investments</h3>
 						<p class="mt-2 text-sm text-balance">
@@ -144,7 +108,7 @@
 				</div>
 
 				<!-- Expandable Content -->
-				<div class="ts-expandable px-8 pb-16" data-expandable>
+				<div class="ts-expandable px-8 pt-12 pb-16" data-expandable>
 					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
 						<h3 class="font-serif font-light text-lg">New ERA</h3>
 						<p>
@@ -198,9 +162,11 @@
 				</div>
 			</section>
 
-			<section class="bg-gray-light" id="preserve-and-protect">
-				<!-- Background Image -->
-				<div class="relative flex flex-col justify-center min-h-[40vh] lg:h-[400px] lg:min-h-0">
+
+
+			<section id="preserve-and-protect">
+				<!-- Hero Image -->
+				<div class="relative flex flex-col justify-center min-h-[40vh] lg:h-[300px] lg:min-h-0">
 					<img src="https://tristate.coop/sites/default/files/2025-05/heavy-machinery-creating-fire-breaks.jpg"
 						alt="Heavy machinery creating fire breaks in the forest"
 						class="absolute inset-0 w-full h-full object-cover z-0" />
@@ -210,7 +176,7 @@
 				</div>
 
 				<!-- Heading & Summary -->
-				<div class="pt-10 pb-4">
+				<div class="bg-gray-light py-10">
 					<div class="relative z-10 max-w-xl mx-auto text-center">
 						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Preserve and Protect</h3>
 						<p class="mt-2 text-sm text-balance">
@@ -221,7 +187,7 @@
 				</div>
 
 				<!-- Expandable Content -->
-				<div class="ts-expandable px-8 pb-16" data-expandable>
+				<div class="ts-expandable px-8 pt-12 pb-16" data-expandable>
 					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
 						<h3 class="font-serif font-light text-lg">Wildfire Mitigation</h3>
 						<p> High temperatures and dry conditions across our service area make the region susceptible to
@@ -276,14 +242,14 @@
 				</div>
 			</section>
 
-			<section class="bg-gray-light" id="good-neighbors">
-				<!-- Background Image -->
-				<div class="relative flex flex-col justify-center min-h-[40vh] lg:h-[400px] lg:min-h-0">
+
+
+			<section id="good-neighbors">
+				<!-- Hero Image -->
+				<div class="relative flex flex-col justify-center min-h-[40vh] lg:h-[300px] lg:min-h-0">
 					<img src="https://tristate.coop/sites/default/files/2025-05/homes-under-construction.jpg"
 						alt="Homes under construction" class="absolute inset-0 w-full h-full object-cover z-0" />
-
 					<div class="absolute inset-0 bg-black/20 z-5"></div>
-
 					<div class="size-52 aspect-square mx-auto p-4 z-10">
 						<img src="./assets/images/efficiency/house-white.svg" />
 					</div>
@@ -291,7 +257,7 @@
 
 
 				<!-- Heading & Summary -->
-				<div class="pt-10 pb-4">
+				<div class="bg-gray-light py-10">
 					<div class="relative z-10 max-w-xl mx-auto text-center">
 						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Good Neighbors</h3>
 						<p class="mt-2 text-sm text-balance">
@@ -302,7 +268,7 @@
 				</div>
 
 				<!-- Expandable Content -->
-				<div class="ts-expandable px-8 pb-16" data-expandable>
+				<div class="ts-expandable px-8 pt-12 pb-16" data-expandable>
 					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
 						<h3 class="font-serif font-light text-lg">Community Engagement/Charitable Giving</h3>
 						<p>
@@ -368,9 +334,11 @@
 				</div>
 			</section>
 
-			<section class="bg-gray-light" id="shared-success">
-				<!-- Background Image -->
-				<div class="relative flex flex-col justify-center min-h-[40vh] lg:h-[400px] lg:min-h-0">
+
+
+			<section id="shared-success">
+				<!-- Hero Image -->
+				<div class="relative flex flex-col justify-center min-h-[40vh] lg:h-[300px] lg:min-h-0">
 					<img src="https://tristate.coop/sites/default/files/2025-05/tri-state-hub-thompson-meeting-room.jpg"
 						alt="Large meeting room at Tri-State's headquarters in Westminster, Colorado"
 						class="absolute inset-0 w-full h-full object-cover z-0" />
@@ -380,19 +348,18 @@
 				</div>
 
 				<!-- Heading & Summary -->
-				<div class="pt-10 pb-4">
+				<div class="bg-gray-light py-10">
 					<div class="relative z-10 max-w-xl mx-auto text-center">
 						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Shared Success</h3>
 						<p class="mt-2 text-sm text-balance">
-							We’re all in this together, working closely with our cooperative members to reach our energy
-							goals and ensure
-							affordability and reliability for our consumers.
+							We're all in this together, working closely with our cooperative members to reach our energy
+							goals and ensure affordability and reliability for our consumers.
 						</p>
 					</div>
 				</div>
 
 				<!-- Expandable Content -->
-				<div class="ts-expandable px-8 pb-16" data-expandable>
+				<div class="ts-expandable px-8 pt-12 pb-16" data-expandable>
 					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
 						<h3 class="font-serif font-light text-lg">Cooperative Governance</h3>
 						<p>
