Coop Diff: Full content swap v1

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -101,8 +101,11 @@
 					<div class="relative z-10 max-w-xl mx-auto text-center">
 						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Energy Investments</h3>
 						<p class="mt-2 text-sm text-balance">
+							An all-of-the-above approach to meet today’s energy needs.
 							We empower members to make new investments and encourage an all-of-the-above resource
-							approach to drive rural economic development.
+							approach to drive rural economic
+							development.
+
 						</p>
 					</div>
 				</div>
@@ -113,7 +116,7 @@
 						<h3 class="font-serif font-light text-lg">New ERA</h3>
 						<p>
 							Tri-State was recently awarded $2.5 billion in financing through the U.S. Department of
-							Agriculture’s Empowering Rural America (New ERA) Program. This program has been the most
+							Agriculture's Empowering Rural America (New ERA) Program. This program is the most
 							significant federal funding for rural electric cooperatives since 1936 and will help to
 							further our investments to meet growing energy demand and improve the reliability and
 							resiliency of our system.
@@ -122,11 +125,11 @@
 							The program, designed to help rural cooperatives implement reliable and affordable energy
 							transitions, will support the building of new energy projects and some transmission, as well
 							as the retirement of outdated sites. These projects will fight high energy costs and help
-							our members reach 70% clean energy used in 2030, reducing greenhouse gas emissions by nearly
+							our members reach 70% clean energy use in 2030, reducing greenhouse gas emissions by nearly
 							5.8 million tons annually.
 						</p>
 						<p>
-							As part of the New ERA Program, we’re also investing in rural communities and offering
+							As part of the New ERA Program, we're also investing in rural communities and offering
 							community support, delivering on our commitment to our communities and those hosting our
 							energy projects.
 						</p>
@@ -142,12 +145,16 @@
 						<p>
 							Following <a href="https://tristate.coop/co-regulators-approve-ERP-settlement"
 								class="underline">regulatory approval of our Phase I ERP</a> from the Colorado Public
-							Utilities Commission, we’ve now initiated Phase II, beginning with the procurement process
-							for new resources. It will lead to over an 80% reduction in our greenhouse gas emissions in
+							Utilities Commission, we've now initiated Phase II, beginning with the procurement process
+							for new resources that will lead to over an 80% reduction in our greenhouse gas emissions in
 							Colorado and 70% clean energy used by our members systemwide by 2030. Phase II also includes
-							landmark direct financial assistance to the communities of Craig and Moffat County,
-							supporting their economic viability in light of coal plant closures.
+							landmark direct financial assistance to the communities of Craig and Moffat County impacted
+							by coal plant closures to help ensure their economic viability.
 						</p>
+						<a href="https://tristate.coop/erp"
+							class="inline-flex items-center gap-2 rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray">
+							Visit our ERP page
+						</a>
 					</div>
 
 					<div class="flex justify-center items-center">
@@ -180,8 +187,10 @@
 					<div class="relative z-10 max-w-xl mx-auto text-center">
 						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Preserve and Protect</h3>
 						<p class="mt-2 text-sm text-balance">
+							Ensuring ‘safety first’ across our Western service territory.
 							We keep our communities and employees safe as we uphold a culture of safety in the field, at
 							the office, and at home.
+
 						</p>
 					</div>
 				</div>
@@ -190,41 +199,48 @@
 				<div class="ts-expandable px-8 pt-12 pb-16" data-expandable>
 					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
 						<h3 class="font-serif font-light text-lg">Wildfire Mitigation</h3>
-						<p> High temperatures and dry conditions across our service area make the region susceptible to
+						<p>
+							High temperatures and dry conditions across our service area makes the region susceptible to
 							wildfires. To protect the people and ecosystems we serve and provide reliable energy,
-							Tri-State has developed an approach focusing on situational awareness. We’re using tools
+							Tri-State has developed an approach that focuses on situational awareness. We're using tools
 							like drones and weather monitoring to analyze risk reduction and are in constant
-							communication with land managers, fire districts, and other utilities to properly assess and
+							communication with land managers, fire districts and other utilities to properly assess and
 							manage risk. The data we collect allows us to better understand the breadth of challenges
-							posed by wildfires. We’re working hard to reduce risk through an average of 3,500 man-hours
-							per year in vegetation management and clearing. To complement our regional efforts, our
-							staff regularly coordinates with federal agencies. We are also uniquely positioned to have
-							ongoing wildfire mitigation conversations with relevant agencies and industry partners
-							through the Electricity Subsector Coordinating Council (ESCC) Wildfire Working Group.
+							posed by wildfires and we're working hard to reduce risk through an average of 3,500
+							man-hours per year in vegetation management and clearing.
 						</p>
-						<a href="/wildfire-mitigation"
+						<p>
+							To complement our regional efforts, our staff regularly coordinates with federal agencies.
+							We are also uniquely positioned to have ongoing wildfire mitigation conversations with
+							relevant agencies and industry partners through the Electricity Subsector Coordinating
+							Council (ESCC) Wildfire Working Group.
+						</p>
+						<a href="https://tristate.coop/wildfire-mitigation"
 							class="mb-6 inline-flex rounded-full border border-black px-4 py-2 font-normal no-underline text-black">
 							View Wildfire Mitigation Plan
 						</a>
 
 						<h3 class="mt-8 font-serif font-light text-lg">Workplace Safety</h3>
 						<p>
-							Safety is our core value, and we put the safety of our employees, contractors, and
+							Safety is our core value, and we put the safety of our employees, contractors and
 							communities above all else. We are committed to shaping a culture of safety, where every
-							worker is encouraged to share safety tips, close calls, stories, and knowledge in and out of
+							worker is encouraged to share safety tips, close calls, stories and knowledge in and out of
 							meetings to improve our collective well-being. We believe that safety is built through
-							relationships, and we encourage our employees to take care of one another and maintain good
-							communication. We reinforce our commitment to safety in ways big and small. This includes
-							providing personal protective equipment, access to continuing safety education, trainings
-							and certifications, and encouraging a standard of incident reporting to improve our safety.
-							Tri-State recognizes that some jobs at our electric cooperative come with more risk than
-							others, which is why we recognize those in high-risk roles and provide hazard rate pay.
-							Tri-State’s leaders set the safety example, and field-trained safety personnel are on site
-							at all times with employees. This year alone, two coal sites in Colorado reached 12 and 13
-							years respectively without having any serious injury, and three employees received awards
-							from the Colorado Mining Association for 30 years without injury.
+							relationships and encourage our employees to take care of one another and maintain good
+							communication.
 						</p>
-						<a href="/company-culture"
+						<p>
+							We reinforce our commitment to safety in ways big and small, including providing personal
+							protective equipment, access to continuing safety education, trainings and certifications,
+							and encouraging a standard of incident reporting to improve our safety. Tri-State recognizes
+							that some jobs at our electric cooperative come with more risk than others, which is why we
+							recognize those in high-risk roles and provide hazard rate pay. Tri-State's leaders set the
+							safety example and field-trained safety personnel are on site at all times with employees.
+							This year alone, two coal sites in Colorado reached 12 and 13 years respectively without
+							having a serious injury, and three employees received awards from the Colorado Mining
+							Association for 30 years without injury.
+						</p>
+						<a href="https://tristate.coop/company-culture"
 							class="mb-6 inline-flex rounded-full border border-black px-4 py-2 font-normal no-underline text-black">
 							Company Culture
 						</a>
@@ -261,8 +277,10 @@
 					<div class="relative z-10 max-w-xl mx-auto text-center">
 						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Good Neighbors</h3>
 						<p class="mt-2 text-sm text-balance">
+							Giving back to the communities we serve beyond the grid.
 							We are good neighbors to the rural communities we serve, giving back and supporting our
 							local economies.
+
 						</p>
 					</div>
 				</div>
@@ -272,51 +290,34 @@
 					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
 						<h3 class="font-serif font-light text-lg">Community Engagement/Charitable Giving</h3>
 						<p>
-							Tri-State is committed to giving back to the rural communities in which we operate. We
-							support
-							community organizations and charities like 4-H, Cooperative Family Fund, Future Farmers of
-							America, and
-							other rural-focused groups across Nebraska, Colorado, New Mexico and Wyoming. We also
-							encourage our
-							employees to give back. In 2024, Tri-State employees volunteered in their communities for a
-							total of 456
-							hours. Employees have the flexibility to choose which organizations they would like to
-							support, allowing
-							them to
-							participate in the causes they find most impactful to their communities. Additionally,
-							Tri-State has
-							supported our employee efforts by matching employee donations to non-profit organizations of
-							their
-							choosing.
-							Most recently, employees and Tri-State donated over $246,000 to 73 chosen charities,
-							bettering
-							communities across the Western states.
+							Tri-State is committed to giving back to the rural communities in which we operate,
+							supporting community organizations and charities like 4-H, Cooperative Family Fund, Future
+							Farmers of America, and other rural-focused groups across Nebraska, Colorado, New Mexico and
+							Wyoming. We also encourage our employees to give back. In 2024, Tri-State employees
+							volunteered in their communities for a total of 456 hours. Employees have the flexibility to
+							choose which organizations they would like to support, allowing them to participate in the
+							causes they find most impactful to their communities.
+						</p>
+						<p>
+							Tri-State has also supported our employee efforts by matching employee donations to
+							non-profit organizations of their choosing. Most recently, employees and Tri-State donated
+							over $246,000 to 73 chosen charities, bettering communities across the Western states.
 						</p>
 
 						<h3 class="mt-8 font-serif font-light text-lg">Consumer Programs</h3>
 						<p>
 							Tri-State's commitment to affordability extends beyond the grid. Our On-Bill Repayment
-							program
-							aims to make energy efficiency and electrification updates more accessible for everyone by
-							working with
-							our
-							members to offer consumers financing for home efficiency upgrades that require no money
-							down, no credit
-							check, and can be paid back over time through monthly electricity bills. The program offers
-							low interest
-							rates
-							that won’t exceed more than 5% of the original fee. Tri-State members and consumers also
-							have access to
-							an
-							energy efficient ecosystem that includes rebates, financing, equipment, education, and
-							trustworthy
+							program aims to make energy efficiency and electrification updates more accessible for
+							everyone by working with our members to offer consumers financing for home efficiency
+							upgrades that require no money down, no credit check, and can be paid back over time through
+							monthly electricity bills. The program offers low interest rates that won't exceed more than
+							5% of the original fee. Tri-State members and consumers also have access to an energy
+							efficient ecosystem that includes rebates, financing, equipment, education, and trustworthy
 							contractors who help to complete efficiency upgrades, with the goal of reducing emissions
-							and consumer
-							energy
-							costs.
+							and consumer energy costs.
 						</p>
 
-						<a href="/electrify-and-save"
+						<a href="https://tristate.coop/electrify-and-save"
 							class="inline-flex items-center gap-2 rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray">
 							Efficiency Programs
 						</a>
@@ -352,8 +353,11 @@
 					<div class="relative z-10 max-w-xl mx-auto text-center">
 						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Shared Success</h3>
 						<p class="mt-2 text-sm text-balance">
-							We're all in this together, working closely with our cooperative members to reach our energy
-							goals and ensure affordability and reliability for our consumers.
+							Achieving affordability and reliability through the cooperative business model. We’re all in
+							this together, working closely with our cooperative members to reach our energy goals and
+							ensure
+							affordability and reliability for our consumers.
+
 						</p>
 					</div>
 				</div>
@@ -363,41 +367,28 @@
 					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
 						<h3 class="font-serif font-light text-lg">Cooperative Governance</h3>
 						<p>
-							Tri-State’s cooperative model and member-led governance structure differentiates us from
-							other
-							for-profit corporate utilities. We’re proud to say that our 43 member-owners and board of
-							representatives,
-							appointed by 40 distribution utility members, have a seat at the table. The Board determines
-							business
-							decisions, sets priorities, makes policy decisions, and guides strategic planning for
-							Tri-State
-							initiatives,
-							offering each utility member the opportunity to bring their unique voices to the forefront.
-							Tri-State
-							truly
-							operates by the people and for the people, bringing transparency to our governance and
-							giving everyone a
+							Tri-State's cooperative model and member-led governance structure differentiates us from
+							other, for-profit corporate utilities. We're proud to say that our 43 member-owners and
+							board of representatives, appointed by 40 distribution utility members, have a seat at the
+							table. The Board determines business decisions, sets priorities, makes policy decisions, and
+							guides strategic planning for Tri-State initiatives, offering each utility member the
+							opportunity to bring their unique voices to the forefront. Tri-State truly operates by the
+							people and for the people, bringing transparency to our governance and giving everyone a
 							platform to make their voices heard.
 						</p>
 
 						<h3 class="mt-8 font-serif font-light text-lg">Flexibility/BYOR</h3>
 						<p>
-							Our Bring Your Own Resource program provides flexibility to Tri-State members. The program
-							allows them to develop their own projects that reflect the unique advantages and needs and
-							keep consumer
-							costs
-							low in their service area. Recently accepted by federal regulators, projects are
-							independently evaluated
-							to
-							meet reliability, economic, and environmental criteria. We expect that many future projects
-							in the
-							program will use renewable energy sources, continuing our commitment to achieving 50%
-							renewable energy
-							usage
-							by our members in 2025, with a goal of 70% by 2030.
+							Our Bring Your Own Resource program provides flexibility to Tri-State members by allowing
+							them to develop their own projects that reflect the unique advantages and needs in their
+							service area and keep consumer costs low. Recently accepted by federal regulators, projects
+							are independently evaluated to meet reliability, economic, and environmental criteria. We
+							expect that many future projects in the program will use renewable energy sources,
+							continuing our commitment to achieving 50% renewable energy used by members in 2025 and
+							rising to 70% in 2030.
 						</p>
 
-						<a href="/our-energy-mix"
+						<a href="https://tristate.coop/our-energy-mix"
 							class="inline-flex items-center gap-2 rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray">
 							Our Energy Mix
 						</a>
